# py2ts

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTION.md  Changelog.md  Makefile  README.md  TODOs.md  pyproject.toml
.github/workflows/: release.yml  workflow.yml
docs/: conf.py  index.md  quickstart.ipynb  references.md  supported.md
docs/examples/: flask_quart.ipynb  index.md
src/py2ts/: __init__.py  __main__.py  builder.py  config.py  convert.py  data.py  generate.py  utils.py
tests/: test_array.py  test_builder.py  test_enum.py  test_inheritance.py  test_literal.py  test_primitives.py  test_record.py  test_tabvspaces.py  test_tuple.py  test_typeddict.py  test_union.py
